# wigglyair

./: .gitignore  Cargo.toml  Makefile  README.md  configuration.yml
benches/: my_benchmark.rs
migrations/: 20230809235427-create-tracks.sql
scripts/: build-for-nas  copy-from-nas  run
src/: configuration.rs  database.rs  files.rs  lib.rs  main.rs  metadata.rs  routes.rs  types.rs
