[package]
name = "wigglyair"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
audio_thread_priority = "0.27.1"
axum = "0.6.20"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
config = "0.13.3"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossterm = "0.27.0"
futures = "0.3.28"
itertools = "0.11.0"
metaflac = "0.2.5"
once_cell = "1.18.0"
proptest = "1.2.0"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusqlite_migration = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"
serde_rusqlite = "0.33.1"
symphonia = "0.5.3"
thiserror = "1.0.44"
tinyaudio = "0.1.2"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tokio-rusqlite = "0.4.0"
tracing = { version = "0.1.37", features = ["log"] }
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.8"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-unwrap = { version = "0.10.0", features = ["log-location"] }
walkdir = "2.3.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"

[profile.profiling]
inherits = "release"
strip = "none"
debug = true
